<?xml version="1.0"?>
<package format="2">
    <name>observer_msgs</name>
    <version>0.0.1</version>
	<description>remote_cmd_msgs</description>

    <author email="123@qq.com">zmz</author>
    <maintainer email="123@qq.com">zmz</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>std_msgs</depend>
        <depend>anm_msgs</depend>
	<depend>chang_an_msgs</depend>
	<depend>dbw_mkz_msgs</depend>
	<depend>message_generation</depend>
	<depend>message_runtime</depend>
</package>
