<?xml version="1.0"?>
<package format="2">
    <name>planning_state_msgs</name>
    <version>0.0.1</version>
	<description>planning_state_msgs</description>

    <author email="123@qq.com">zmz</author>
    <maintainer email="123@qq.com">zmz</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>std_msgs</depend>
        <depend>geometry_msgs</depend>
	<depend>message_generation</depend>
	<depend>message_runtime</depend>
</package>
