<?xml version="1.0"?>
<package format="2">
  <name>simulation_msgs</name>
  <version>0.0.0</version>
  <description>The simulation_msgs package</description>
  <maintainer email="star@todo.todo">shawn</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

</package>